--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   </header>
 
   <nav class="menu-categorias">
-    <a href="local-pizzas.html">PIZZAS & EMPANADAS</a>
-    <a href="local-milanesas.html">MILANESAS & HAMBURGUESAS</a>
-    <a href="local-pastas.html">PASTAS</a>
+    <a href="pizzas.html">PIZZAS & EMPANADAS</a>
+    <a href="hamburguesas.html">MILANESAS & HAMBURGUESAS</a>
+    <a href="pastas.html">PASTAS</a>
    <a href="local-parrilla.html">COMIDAS</a>
    <a href="local-parrilla.html">A LA PARRILLA</a>
     <a href="local-postres.html">HELADOS & POSTRES</a>
